# robert-py

./: .gitignore  .gitmodules  LICENSE  README.md  justfile  notes.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/robert/: client.py  protocol.py
tests/: .gitignore  test_movec.py  test_movel.py  test_script.py
