[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "robert-py"
version = "1.0.0"
authors = [
    { name = "Juan Sobalvarro", email = "sobalvarrog.juans@gmail.com" },
]
description = "A Python library to interact with RobeRT server."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "pyzmq>=27.0.1",
    "protobuf>=6.33.6"
]

[project.optional-dependencies]
dev = [
    "grpcio-tools" # compilation of proto files
]

[project.urls]
Homepage = "https://github.com/JuanSobalvarro/robert-py"
Repository = "https://github.com/JuanSobalvarro/robert-py"

[tool.hatch.build.targets.wheel]
packages = ["src/robert"]